[metadata]
name = qsimpy-aqm
version = attr: qsimpy-aqm.__version__
author = Seyed Samie Mostafavi
author_email = samiemostafavi@gmail.com
url = https://github.com/samiemostafavi/qsimpy-aqm
description = Queue management schemes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = aqm, active, queue, management
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pre-commit
    black
    flake8
    isort
    codespell 
    pandas
    numpy
    pandas
    pyparsing
    dataclasses
    matplotlib
    tabulate
    deepdiff
    dill
    loguru
    pre-commit
    black
    flake8
    isort
    codespell
      

