[metadata]
name = qsimpy-aqm
version = attr: qsimpy_aqm.__version__
author = Seyed Samie Mostafavi
author_email = samiemostafavi@gmail.com
url = https://github.com/samiemostafavi/qsimpy-aqm
description = Active queue management schemes in a queuing theoretic simulation using SimPy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = active queue management, queuing theory, simpy
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:
install_requires =
    qsimpy @ git+https://github.com/samiemostafavi/qsimpy.git
    pr3d @ git+https://github.com/samiemostafavi/pr3d.git
    stable-baselines3==1.6.0
    numpy
    pandas
    dataclasses
    pydantic
    
[options.packages.find]
include=qsimpy_aqm*
exclude=arrivals

[options.extras_require]
dev =
    pyspark==3.3.0
    matplotlib
    loguru
    seaborn
    tensorflow==2.8.0
    pyspark==3.3.0
    polars
    pre-commit
    black
    flake8
    isort
    codespell